--- a/Master.cls
+++ b/Master.cls
@@ -231,5 +231,19 @@ Sub Atualizar_Exportar
 ' ------------------------------------------------------------------------------------------------------------------------------------
 ' ------------------------------------------------------------------------------------------------------------------------------------
 
+' código para limpar os dados após a exportação
+    Sheets("OITM - Cadastro do Item").Select
+    Rows("3:" & Rows.Count).ClearContents
+
+    Sheets("ITT1 - Campos OITT").Select
+    Rows("3:" & Rows.Count).ClearContents
+
+    Sheets("OITT - Estrutura de Produto").Select
+    Rows("3:" & Rows.Count).ClearContents
+
+' ------------------------------------------------------------------------------------------------------------------------------------
+' ------------------------------------------------------------------------------------------------------------------------------------
+    ' fechar o form
+    Unload Form_Exportacao
 
 End Sub
